# idea-analyzer

./: LICENSE  README.md  example.env  pyproject.toml  requirements.lock.txt
analyzer/: cli.py  github_analysis.py  openai_client.py  reddit.py  trends.py
